sg template overflow fix

--- a/src/app/security-group/security-group-template-list-item.component.scss
+++ b/src/app/security-group/security-group-template-list-item.component.scss
@@ -26,5 +26,19 @@
 
   & > div:last-child {
     flex: 2;
+
+    & span {
+      display: block;
+      width: 215px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
+}
+
+/deep/ mdl-simple-tooltip div {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
